# mwhalo-shape-2016

./: .gitignore  LICENSE.rst  MANIFEST.in  README.rst  open_notebook.sh  setup.cfg  setup.py  tox.ini
data/: ABOUT.txt
data/pal5_mcmc_2016/: ABOUT.txt  mwpot14-pal5-varyd.pkl  mwpot14-pal5-varypm.pkl  mwpot14varyc-bf.pkl  mwpot14varyc-samples.pkl
docs/: conf.py  index.rst
docs/pal5_constrain_mwhalo_shape/: index.rst
examples/0-illustrate_actionangle/: .galpyrc  illustrate_actionangle_script.py
notebooks/: pal5-testPredictObs.ipynb
notebooks/2016_runs/: MWPotential2014-varyc.ipynb  mwpot14-pal5-varyc.pkl  mwpot14-pal5-varyvc.pkl  mwpot14varyc-bf.pkl  mwpot14varyc-dblexp-bf.pkl  pal5Modeling.ipynb  sdf_leading.pkl  sdf_trailing.pkl
pal5_constrain_mwhalo_shape/: __init__.py  _astropy_init.py  mcmc_util.py  version.py
pal5_constrain_mwhalo_shape/data/: __init__.py
pal5_constrain_mwhalo_shape/mw_pot/: MWPotential2014Likelihood.py  __init__.py  likelihood.py  plot.py  potential.py  setup_package.py  utils.py
pal5_constrain_mwhalo_shape/mw_pot/data/: __init__.py
pal5_constrain_mwhalo_shape/scripts/create_MW_potential_2014/: __init__.py  fit_mwpot14_script.py  fit_mwpot_dblexp_script.py  fit_potential_combo_pal5_gd1_script.py  fit_potential_gd1_script.py  fit_potential_pal5_script.py  script_util.py
pal5_constrain_mwhalo_shape/streams/: __init__.py
pal5_constrain_mwhalo_shape/streams/gd1/: __init__.py  gd1_util.py  setup_package.py  utils.py
pal5_constrain_mwhalo_shape/streams/pal5/: pal5_util.py  utils.py
pal5_constrain_mwhalo_shape/utils/: __init__.py  exceptions.py  symlink_latest.py
scripts/: ABOUT.md
scripts/0-create_MW_potential_2014/: latest
scripts/1-palomar_5/: analyze_pal5.py  latest  mcmc_pal5.py  mw_dmhalo_shape_script.py
scripts/2-gd1/: mcmc_gd1.py
src/: MWPotential2014Likelihood.py  __init__.py  analyze_pal5.py  gd1_util.py  illustrate_actionangle.py  mcmc_gd1.py  mcmc_pal5.py  mcmc_util.py  pal5_util.py  symlink_latest.py
src/data/: __init__.py
src/mw_pot/: MWPotential2014Likelihood.py  __init__.py  plot.py  setup_package.py  utils.py
src/scripts/: __init__.py
src/streams/gd1/: utils.py  (+1 more)
(+39 files in other folders)
