[metadata]
name = pal5_constrain_mwhalo_shape
author = Nathaniel Starkman
author_email = n.starkman@mail.utoronto.ca
license = Other
license_file = licenses/LICENSE.rst
url = https://github.com/nstarman/mwhalo-shape-2016
description = Investigation into the shape of the inner DM halo with stream kinematics.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = nstarman/mwhalo-shape-2016

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
pal5_constrain_mwhalo_shape = data/*

[tool:pytest]
testpaths = "pal5_constrain_mwhalo_shape" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    pal5_constrain_mwhalo_shape/_astropy_init*
    pal5_constrain_mwhalo_shape/conftest.py
    pal5_constrain_mwhalo_shape/*setup_package*
    pal5_constrain_mwhalo_shape/tests/*
    pal5_constrain_mwhalo_shape/*/tests/*
    pal5_constrain_mwhalo_shape/extern/*
    pal5_constrain_mwhalo_shape/version*
    */pal5_constrain_mwhalo_shape/_astropy_init*
    */pal5_constrain_mwhalo_shape/conftest.py
    */pal5_constrain_mwhalo_shape/*setup_package*
    */pal5_constrain_mwhalo_shape/tests/*
    */pal5_constrain_mwhalo_shape/*/tests/*
    */pal5_constrain_mwhalo_shape/extern/*
    */pal5_constrain_mwhalo_shape/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
